@@ -3,7 +3,6 @@ package com.example.ITSSJP1.service.impl;
 import com.example.ITSSJP1.dto.BasePage;
 import com.example.ITSSJP1.dto.PlanDTO;
 import com.example.ITSSJP1.entity.Planner;
-import com.example.ITSSJP1.entity.User;
 import com.example.ITSSJP1.exception.AppException;
 import com.example.ITSSJP1.exception.Errors;
 import com.example.ITSSJP1.repository.PlannerRepository;
@@ -21,7 +20,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,9 +31,7 @@ public class PlanServiceImpl implements PlanService {
     public PlanDTO create(PlanDTO planDTO) {
         if( Objects.isNull(planDTO.getUserId()))
             throw new AppException(Errors.INVALID_DATA);
-        Optional<User> userOptional = userRepo.findById(planDTO.getUserId());
-        if (userOptional.isEmpty())
-            throw new AppException(Errors.INVALID_DATA);
+        userRepo.findById(planDTO.getUserId()).orElseThrow(()-> new AppException(Errors.INVALID_DATA));
         if ( !Utils.isCorrectFormat(planDTO.getTime(), Constant.DATE_FORMAT) )
             throw new AppException(Errors.INCORRECT_FORMAT);
         ModelMapper mapper = new ModelMapper();
@@ -47,16 +43,17 @@ public class PlanServiceImpl implements PlanService {
     public PlanDTO update(Integer planId, PlanDTO planDTO) {
         if( Objects.isNull(planDTO.getUserId()))
             throw new AppException(Errors.INVALID_DATA);
-        Optional<User> userOptional = userRepo.findById(planDTO.getUserId());
-        if (userOptional.isEmpty())
+        if (userRepo.findById(planDTO.getUserId()).isEmpty())
             throw new AppException(Errors.INVALID_DATA);
         Optional<Planner> plannerOptional = planRepo.findById(planId);
         if( plannerOptional.isEmpty())
             throw new AppException(Errors.INVALID_DATA);
+        if( !Utils.isCorrectFormat( planDTO.getTime(), Constant.DATE_FORMAT))
+            throw new AppException(Errors.INCORRECT_FORMAT);
         ModelMapper mapper = new ModelMapper();
         Planner planner = mapper.map(planDTO, Planner.class);
         planner.setPlannerId(planId);
-        planner.setUserId(plannerOptional.get().getUserId());
+        planner.setUserId(planner.getUserId());
         return mapper.map(planRepo.save(planner), PlanDTO.class);
     }
 
@@ -81,7 +78,7 @@ public class PlanServiceImpl implements PlanService {
         dataPage.setElements(plannerPage.getNumberOfElements());
         dataPage.setTotalElements(plannerPage.getTotalElements());
         ModelMapper mapper = new ModelMapper();
-        dataPage.setData(plannerPage.get().map( planner -> mapper.map(planner, PlanDTO.class)).collect(Collectors.toList()));
+        dataPage.setData(plannerPage.get().map( planner -> mapper.map(planner, PlanDTO.class)).toList());
         return dataPage;
     }
 
